Gave p:nth-of-type(1) a margin top of 60px so that it doesn't appear behind the h1 fixed element

--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,7 @@ h1 {
   background: white;
   padding: 10px;
 }
+
+p:nth-of-type(1) {
+  margin-top: 60px;
+}
